force-app/main/default/objects/Contact_Badge_Definition__mdt/Contact_Badge_Definition__mdt.object-meta.xml
<CustomObject>
    <description>Define the the criteria for and the appearance and behavior of displayed badges in the Contact Badges component</description>
    <label>Contact Badge Definition</label>
    <pluralLabel>Contact Badge Definitions</pluralLabel>
</CustomObject>