force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Additional_Detail_Fields__c.field-meta.xml
<CustomField>
    <fullName>Additional_Detail_Fields__c</fullName>
    <description>The fields to display when a user selects a badge</description>
    <inlineHelpText>Enter API field names, separated by commas, for any fields that should be displayed when a user selects a badge</inlineHelpText>
    <label>Additional Detail Fields</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>