force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Child_Object__c</fullName>
    <description>The API name of the SObject that the badge&apos;s source data is based on</description>
    <inlineHelpText>The API name of the SObject that the badge&apos;s source data is based on</inlineHelpText>
    <label>Child Object</label>
    <length>58</length>
    <required>true</required>
    <type>Text</type>
</CustomField>