force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria__c</fullName>
    <description>The criteria to include in the WHERE clause of the SOQL query</description>
    <inlineHelpText>The criteria to include in the WHERE clause of the SOQL query</inlineHelpText>
    <label>Filter Criteria</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>