force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <description>Use a supported Lightning Design System icon name (e.g. standard:brand)</description>
    <inlineHelpText>Use a supported Lightning Design System icon name (e.g. standard:brand)</inlineHelpText>
    <label>Icon Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>