force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Is_Sample_Badge__c.field-meta.xml
<CustomField>
    <fullName>Is_Sample_Badge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not delete. Used in test scenarios.</description>
    <inlineHelpText>Do not delete. Used in test scenarios.</inlineHelpText>
    <label>Is Sample Badge</label>
    <type>Checkbox</type>
</CustomField>