force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Use {!My_Custom_Field__c} syntax to display merged values from the child object</description>
    <inlineHelpText>Use {!My_Custom_Field__c} syntax to display merged values from the child object</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>