force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Label_Color__c.field-meta.xml
<CustomField>
    <fullName>Label_Color__c</fullName>
    <description>Hexidecimal color code for the label text and icon</description>
    <inlineHelpText>Hexidecimal color code for the label text and icon</inlineHelpText>
    <label>Label Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>