force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Parent_ID_Path__c.field-meta.xml
<CustomField>
    <fullName>Parent_ID_Path__c</fullName>
    <description>The API path to the parent Contact or Account ID from the child object</description>
    <inlineHelpText>The API path to the parent Contact or Account ID from the child object (e.g. ContactId,  AccountId, My_Custom_Contact_Lookup__c,  My_Custom_Contact_Lookup__r.AccountId)</inlineHelpText>
    <label>Parent ID Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>