force-app/main/default/objects/Contact_Badge_Definition__mdt/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <description>Indicates whether the source data is related to the contact or the contact&apos;s account</description>
    <inlineHelpText>Indicates whether the source data is related to the contact or the contact&apos;s account</inlineHelpText>
    <label>Parent Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
                <default>true</default>
                <label>Contact</label>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>