force-app/main/default/objects/Contact_Badge_Definition__mdt/listViews/Active_Definitions.listView-meta.xml
<ListView>
    <fullName>Active_Definitions</fullName>
    <columns>MasterLabel</columns>
    <columns>NamespacePrefix</columns>
    <columns>Active__c</columns>
    <columns>Parent_Object__c</columns>
    <columns>Child_Object__c</columns>
    <columns>Label__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Background_Color__c</columns>
    <columns>Icon_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Definitions</label>
</ListView>