force-app/main/default/objects/Contact_Badge_Definition__mdt/listViews/Sample_Definitions.listView-meta.xml
<ListView>
    <fullName>Sample_Definitions</fullName>
    <columns>MasterLabel</columns>
    <columns>NamespacePrefix</columns>
    <columns>Is_Sample_Badge__c</columns>
    <columns>Child_Object__c</columns>
    <columns>Parent_Object__c</columns>
    <columns>Label__c</columns>
    <columns>Icon_Name__c</columns>
    <columns>Background_Color__c</columns>
    <columns>Label_Color__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Sample_Badge__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Sample Definitions</label>
</ListView>